# ml-cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.repo_name }}/: .dockerignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  DEVGUIDE.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/.github/: PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.repo_name }}/scripts/: build_package.sh
