[tool.poetry]
name = '{{ cookiecutter.repo_name }}'
version = "0.1.0"
description = '{{ cookiecutter.description }}'
authors = ['{{ cookiecutter.author_name }}']
license = '{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}'

[tool.poetry.dependencies]
python = '{{ cookiecutter.python_interpreter}}'
click = "^8.0.1" 
sphinx-pyreverse = "^0.0.16"
coverage = "^5.5"
awscli = "^1.19.94"
flake8 = "^3.9.2"
black = "^21.6b0"
pre-commit = "^2.13.0"
python-dotenv = "0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
